--- a/views/admin/settings.ejs
+++ b/views/admin/settings.ejs
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="/css/admin/nav.css" />
-    <link rel="stylesheet" href="/css/admin/settings.css" />
-    <title>Admin-Settings</title>
-  </head>
-  <body>
-    <%- include("./nav.ejs") %>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <link rel="stylesheet" href="/css/admin/nav.css" />
+  <link rel="stylesheet" href="/css/admin/settings.css" />
+  <title>Admin-Settings</title>
+</head>
+
+<body>
+  <%- include("./nav.ejs") %>
     <main>
       <div class="container-xl px-4 mt-4">
         <nav class="nav nav-borders">
@@ -38,11 +32,7 @@
             <div class="card mb-4 mb-xl-0">
               <div class="card-header">Profile Picture</div>
               <div class="card-body text-center">
-                <form
-                  action="upload.php"
-                  method="post"
-                  enctype="multipart/form-data"
-                >
+                <form action="upload.php" method="post" enctype="multipart/form-data">
                   <label for="fileToUpload">
                     <div class="profile-pic">
                       <span class="profilePicture"></span>
@@ -67,76 +57,37 @@
               <div class="card-body">
                 <form id="UpdateProfile_Form">
                   <div class="mb-3">
-                    <label class="small mb-1" for="Username"
-                      >Username (How your name will appear to other users on the
-                      site)</label
-                    >
-                    <input
-                      class="form-control"
-                      id="Username"
-                      type="text"
-                      placeholder="Enter your username"
-                    />
+                    <label class="small mb-1" for="Username">Username (How your name will appear to other users on the
+                      site)</label>
+                    <input class="form-control" id="Username" type="text" placeholder="Enter your username" />
                     <span id="errorUsername" class="error"></span>
                   </div>
                   <div class="row gx-3 mb-3">
                     <div class="col-md-6">
-                      <label class="small mb-1" for="First Name"
-                        >First name</label
-                      >
-                      <input
-                        class="form-control"
-                        id="First Name"
-                        type="text"
-                        placeholder="Enter your first name"
-                      />
+                      <label class="small mb-1" for="First Name">First name</label>
+                      <input class="form-control" id="First Name" type="text" placeholder="Enter your first name" />
                       <span id="errorFirstname" class="error"></span>
                     </div>
                     <div class="col-md-6">
-                      <label class="small mb-1" for="Last Name"
-                        >Last name</label
-                      >
-                      <input
-                        class="form-control"
-                        id="Last Name"
-                        type="text"
-                        placeholder="Enter your last name"
-                      />
+                      <label class="small mb-1" for="Last Name">Last name</label>
+                      <input class="form-control" id="Last Name" type="text" placeholder="Enter your last name" />
                       <span id="errorlastname" class="error"></span>
                     </div>
                   </div>
                   <div class="mb-3">
-                    <label class="small mb-1" for="Email Address"
-                      >Email address</label
-                    >
-                    <input
-                      class="form-control"
-                      id="Email Address"
-                      type="email"
-                      placeholder="Enter your email address"
-                    />
+                    <label class="small mb-1" for="Email Address">Email address</label>
+                    <input class="form-control" id="Email Address" type="email"
+                      placeholder="Enter your email address" />
                   </div>
                   <div class="row gx-3 mb-3">
                     <div class="col-md-6">
                       <label class="small mb-1" for="Phone">Phone number</label>
-                      <input
-                        class="form-control"
-                        id="Phone"
-                        type="tel"
-                        placeholder="Enter your phone number"
-                      />
+                      <input class="form-control" id="Phone" type="tel" placeholder="Enter your phone number" />
                     </div>
                     <div class="col-md-6">
-                      <label class="small mb-1" for="inputBirthday"
-                        >Birthday</label
-                      >
-                      <input
-                        class="form-control"
-                        id="inputBirthday"
-                        type="date"
-                        name="birthday"
-                        placeholder="Enter your birthday"
-                      />
+                      <label class="small mb-1" for="inputBirthday">Birthday</label>
+                      <input class="form-control" id="inputBirthday" type="date" name="birthday"
+                        placeholder="Enter your birthday" />
                     </div>
                   </div>
                   <button class="btn btn-primary" type="submit">
@@ -150,91 +101,19 @@
         </div>
       </div>
     </main>
+
     <script>
       const userName = document.getElementById("Username");
       const firstName = document.getElementById("First Name");
       const lastName = document.getElementById("Last Name");
       const myForm = document.getElementById("UpdateProfile_Form");
       const email = document.getElementById("Email Address");
-      const CollegeName = document.getElementById("College Name");
 
       const errorUsername = document.getElementById("errorUsername");
-      const errorCurrent_Password = document.getElementById("errorCurPassword");
 
-      // numbering format across all countries
-
-      const phoneInputField = document.querySelector("#Phone");
-      const phoneInput = window.intlTelInput(phoneInputField, {
-        utilsScript:
-          "https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.8/js/utils.js",
-      });
-
-      const info = document.querySelector(".alert-info");
-
-      function process(event) {
-        event.preventDefault();
-
-        const phoneNumber = phoneInput.getNumber();
-
-        info.style.display = "";
-        info.innerHTML = `Phone number in E.164 format: <strong>${phoneNumber}</strong>`;
+      function process(e) {
+        e.preventDefault();
       }
-
-      function getIp(callback) {
-        fetch("https://ipinfo.io/json?token=<your token>", {
-          headers: { Accept: "application/json" },
-        })
-          .then((resp) => resp.json())
-          .catch(() => {
-            return {
-              country: "us",
-            };
-          })
-          .then((resp) => callback(resp.country));
-      }
-
-      // countries selections
-
-      mobiscroll.setOptions({
-        locale: mobiscroll.localeAr,
-        theme: "windows",
-        themeVariant: "light",
-      });
-
-      var inst = mobiscroll.select("#demo-country-picker", {
-        display: "anchored",
-        filter: true,
-        itemHeight: 40,
-        renderItem: function (item) {
-          return (
-            '<div class="md-country-picker-item">' +
-            '<img class="md-country-picker-flag" src="https://img.mobiscroll.com/demos/flags/' +
-            item.data.value +
-            '.png" />' +
-            item.display +
-            "</div>"
-          );
-        },
-      });
-
-      mobiscroll.util.http.getJson(
-        "https://trial.mobiscroll.com/content/countries.json",
-        function (resp) {
-          var countries = [];
-          for (var i = 0; i < resp.length; ++i) {
-            var country = resp[i];
-            countries.push({ text: country.text, value: country.value });
-          }
-          inst.setOptions({ data: countries });
-        }
-      );
-
-      // Passwords variables
-
-      const curPassword = document.getElementById("Current Password");
-      const newPassword = document.getElementById("New Password");
-      const conPassword = document.getElementById("Confirm Password");
-
       //Show input error messages
       function showError(input, message) {
         const formControl = input.parentElement;
@@ -293,45 +172,26 @@
         return input.id.charAt(0).toUpperCase() + input.id.slice(1);
       }
 
-      // check passwords match
-      function checkPasswordMatch(input1, input2) {
-        if (input1.value !== input2.value) {
-          showError(input2, "Passwords do not match!");
-        }
-      }
-
       myForm.addEventListener("submit", (e) => {
         e.preventDefault();
         checkRequired([
           userName,
           email,
-          curPassword,
-          newPassword,
-          conPassword,
           firstName,
           lastName,
-          CollegeName,
         ]);
         checkLength(userName, 4, 15);
         checkLength(lastName, 4, 15);
-        checkLength(newPassword, 8, 25);
         checkEmail(email);
-        checkPasswordMatch(newPassword, conPassword);
 
         if (userName.value === "" || userName.value == null) {
           errorUsername.innerHTML = "User name is required";
-        }
-        if (curPassword.value === "" || curPassword.value == null) {
-          errorCurrent_Password.innerText = "Password is required";
-        }
-        if (curPassword.value.length <= 8) {
-          errorCurrent_Password.innerText =
-            "Password must be longer than 8 characters";
         }
         if (message.length > 0) {
           errorMessage.innerText = message.join(", ");
         }
       });
     </script>
-  </body>
+</body>
+
 </html>
